--- a/src/doc/前端初面笔试题-淘宝达人.md
+++ b/src/doc/前端初面笔试题-淘宝达人.md
@@ -34,7 +34,7 @@ const s = '3[a]2[bc]'; decodeString(s); // 返回'aaabcbc'
 ```
 请完善下面的题目
 ```javascript
-function decodeString() {
+function decodeString(str) {
   // todolet stack = []; // 存储字符串的栈
     for (let i = 0; i < str.length; i++) {
         let cur = str[i];
